syntax = "proto3";
option go_package = "raft.com.com/raft/grpc";
import "google/protobuf/empty.proto";

// Raft messages and service
message RPCBallot {
  uint64 term = 1;
  uint64 candidateId = 2;
  uint64 lastLogIndex = 3;
  uint64 lastLogTerm = 4;
}

message RPCBallotResponse {
  uint64 Term = 1;
  bool voteGranted = 2;
}


message RPCLogEntry {
  uint64 Term = 1;
  uint64 Index = 2;
  uint32 Type = 3;
  bytes Command = 4;

}
message RPCAppendEntriesRequest {
  uint64 term = 1;
  uint64 leaderId = 2;
  uint64 prevLogIndex = 3;
  uint64 prevLogTerm = 4;
  uint64 leaderCommit = 5;
  repeated RPCLogEntry entries = 6;
}

message RPCAppendEntriesResponse {
  uint64 term = 1;
  bool success = 2;
}

message RPCJoinClusterRequest {
  uint64 id = 1;
  string addr = 2;
  string port = 3;
}

message RPCJoinClusterResponse {
  bool success = 1;
  string message = 2;
}

message RPCPeer {

}

message RPCInstallSnapshotRequest {
  uint64 term = 1;
  uint64 leaderId = 2;
  uint64 lastIncludedIndex = 3;
  uint64 lastIncludedTerm = 4;
  repeated RPCPeer LastConfig = 5;
  bytes data = 6;
}

message RPCInstallSnapshotResponse {
  uint64 term = 1;
  bool success = 2;
}

service RaftNode {
  rpc RequestVote(RPCBallot) returns (RPCBallotResponse) {}
  rpc AppendEntries(RPCAppendEntriesRequest) returns (RPCAppendEntriesResponse) {}
  rpc JoinCluster(RPCJoinClusterRequest) returns (RPCJoinClusterResponse) {}
}

// Api messages and service for handling client requests
message ClusterInfo {
  uint64 leaderId = 1;
  string leaderAddr = 2;
}

message WriteRequest {
  string command = 1;
}

message WriteResponse {
  bool success = 1;
}

message ReadRequest {
  string command = 1;
}

message ReadResponse {
  string response = 1;
  bool   success = 2;
  string error = 3;
}
service RaftClientService {
  rpc AddClient(google.protobuf.Empty) returns (ClusterInfo) {}
  rpc Write(WriteRequest) returns (WriteResponse) {}
  rpc Read(ReadRequest) returns (ReadResponse) {}
}